# canister-profiling

./: .gitignore  Cargo.toml  Makefile  Profiling.mo  README.md  networks.json  prelude.sh  utils.mk
.github/: CODEOWNERS
.github/workflows/: diff.py  perf.yml  pr-comment.yml  stats.py
basic_dao/: Makefile  README.md  perf.sh
basic_dao/motoko/: perf.sh
basic_dao/rust/: Cargo.toml  dfx.json  perf.sh
basic_dao/rust/src/: heartbeat.rs  service.rs
collections/: Makefile  README.md  echo_motoko.sh  perf.sh
collections/motoko/: dfx.json  heap.did  mops.template.toml  mops.toml  package-set.dhall  vessel.dhall
collections/motoko/src/: StableBTree.mo  ZhenyaHashmap.mo  btreemap.mo  btreemap_stable.mo  buffer.mo  hashmap.mo  heap.mo  orderedmap.mo  random.mo  rbtree.mo  splay.mo  triemap.mo  vector.mo
collections/rust/: Cargo.toml  README.md  collection.did  dfx.json
collections/rust/src/btreemap/: Cargo.toml
collections/rust/src/btreemap/src/: lib.rs
collections/rust/src/btreemap_stable/: Cargo.toml
collections/rust/src/btreemap_stable/src/: lib.rs
collections/rust/src/hashmap/: Cargo.toml
collections/rust/src/hashmap/src/: lib.rs
collections/rust/src/heap/: Cargo.toml
collections/rust/src/heap/src/: lib.rs
collections/rust/src/heap_stable/: Cargo.toml
collections/rust/src/heap_stable/src/: lib.rs
collections/rust/src/imrc_hashmap/: Cargo.toml
collections/rust/src/imrc_hashmap/src/: lib.rs
collections/rust/src/movm/: Cargo.toml
collections/rust/src/movm/src/: lib.rs
collections/rust/src/movm_dynamic/: Cargo.toml
collections/rust/src/movm_dynamic/src/: lib.rs
collections/rust/src/vector/: Cargo.toml
collections/rust/src/vector/src/: lib.rs
collections/rust/src/vector_stable/: Cargo.toml
collections/rust/src/vector_stable/src/: lib.rs
collections/src/: hashmap.mo  random.mo  triemap.mo
collections/tests/: perf.sh  prelude.sh
crypto/: Makefile  README.md  perf.sh
crypto/motoko/: dfx.json  mops.template.toml
crypto/motoko/src/: certified_map.mo  sha.mo  utils.mo
crypto/rust/: dfx.json  map.did  sha.did
crypto/rust/src/certified_map/: Cargo.toml
crypto/rust/src/certified_map/src/: lib.rs
crypto/rust/src/sha/: Cargo.toml
crypto/rust/src/sha/src/: lib.rs
dapps/: Makefile  README.md  basic_dao.sh  nft.sh
dapps/motoko/: dfx.json
dapps/motoko/basic_dao/: Main.mo  Types.mo
dapps/motoko/dip721-nft/: Main.mo  Types.mo
dapps/rust/: dfx.json
dapps/rust/basic_dao/: Cargo.toml
dapps/rust/basic_dao/src/: heartbeat.rs  init.rs  lib.rs  service.rs  types.rs
dapps/rust/dip721-nft/: Cargo.toml  dip721-nft.did
dapps/rust/dip721-nft/src/: lib.rs
gc/: Makefile  README.md  dfx.json  perf.sh
heartbeat/: Makefile  README.md  perf.sh
heartbeat/motoko/: dfx.json  heartbeat.mo  mops.template.toml  package-set.dhall  timer.mo
heartbeat/rust/: Cargo.toml  dfx.json
heartbeat/rust/heartbeat/: Cargo.toml  heartbeat.did
heartbeat/rust/heartbeat/src/: lib.rs
heartbeat/rust/src/: lib.rs  timer.did
heartbeat/rust/timer/: Cargo.toml  timer.did
heartbeat/rust/timer/src/: lib.rs
motoko/: Makefile  README.md  classes.sh  dfx.json  gc.sh  mops.template.toml
motoko/motoko/: dfx.json
pub-sub/: Makefile  README.md
pub-sub/motoko/: dfx.json  perf.sh
pub-sub/motoko/src/pub/: Main.mo
pub-sub/motoko/src/sub/: Main.mo
pub-sub/rust/: dfx.json  perf.sh
pub-sub/rust/publisher/: Cargo.toml
pub-sub/rust/publisher/src/: lib.rs
pub-sub/rust/subscriber/: Cargo.toml
pub-sub/rust/subscriber/src/: lib.rs
utils/motoko/: Profiling.mo
utils/rust/: Cargo.toml
utils/rust/src/: lib.rs
