[workspace]
members = [
    "collections/rust/src/hashmap",
    "collections/rust/src/btreemap",
    "collections/rust/src/heap",
    "collections/rust/src/imrc_hashmap",
    "collections/rust/src/movm",
    "collections/rust/src/movm_dynamic",
    "dapps/rust/dip721-nft",
    "dapps/rust/basic_dao",
    "heartbeat/rust/heartbeat",
    "heartbeat/rust/timer",
    "pub-sub/rust/publisher",
    "pub-sub/rust/subscriber",
]

[profile.release]
debug = false
panic = "abort"
lto = true
opt-level = 3

[workspace.dependencies]
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
candid = "0.9"
serde = "1"
