[workspace]
members = [
    "collections/rust/src/hashmap",
    "collections/rust/src/btreemap",
    "collections/rust/src/heap",
    "collections/rust/src/imrc_hashmap",
    "collections/rust/src/vector",
    "crypto/rust/src/sha",
    "dapps/rust/dip721-nft",
    "dapps/rust/basic_dao",
    "heartbeat/rust/heartbeat",
    "heartbeat/rust/timer",
    "pub-sub/rust/publisher",
    "pub-sub/rust/subscriber",
]

[profile.release]
panic = "abort"
lto = true
opt-level = 2

[workspace.dependencies]
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
candid = "0.9"
serde = "1"
