[workspace]
members = [
    "utils/rust",
    "collections/rust/src/hashmap",
    "collections/rust/src/btreemap",
    "collections/rust/src/btreemap_stable",
    "collections/rust/src/heap",
    "collections/rust/src/heap_stable",
    "collections/rust/src/imrc_hashmap",
    "collections/rust/src/vector",
    "collections/rust/src/vector_stable",
    "crypto/rust/src/sha",
    "crypto/rust/src/certified_map",
    "dapps/rust/dip721-nft",
    "dapps/rust/basic_dao",
    "heartbeat/rust/heartbeat",
    "heartbeat/rust/timer",
    "pub-sub/rust/publisher",
    "pub-sub/rust/subscriber",
]
resolver = "2"

[profile.release]
panic = "abort"
lto = true
opt-level = 2

[workspace.dependencies]
ic-cdk = "0.14.0"
ic-cdk-timers = "0.8"
candid = "0.10.4"
serde = "1"
ic-stable-structures = "0.6"

