[package]
name = "heartbeat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
ic-types = "0.4"
serde = "1.0"
serde_derive = "1.0"
candid = "0.8"
