[package]
name = "basic_dao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk.workspace = true
serde.workspace = true
candid.workspace = true
utils = { path = "../../../utils/rust" }
