[package]
name = "publisher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.0-beta.2"
ic-cdk = "0.8.0-beta.0"
ic-cdk-macros = "0.8.0-beta.0"
serde = "1.0.126"
serde_derive = "1.0.126"

