[package]
name = "movm_dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
fxhash = "0.2.1"
motoko = { rev = "5897a8b57774b55782d8e408a254e045a9afba20", git = "https://github.com/dfinity/motoko.rs"}
motoko_proc_macro = { rev = "5897a8b57774b55782d8e408a254e045a9afba20", git = "https://github.com/dfinity/motoko.rs" }
