[package]
name = "certified_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-certified-map = "0.4"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde = "1"
